# ace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  LIMITATIONS.md  ROADMAP.md  SPEC.md
examples/: approval_lease_demo.py  sample_action.json  sample_evidence_stale.json  sample_evidence_valid.json  sample_lease.json
site/: index.html  styles.css
src/ace_runtime/: __init__.py  cli.py  lease.py  stwebagentbench.py
tests/: test_lease.py  test_stwebagentbench.py
