[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-runtime"
version = "0.1.0"
description = "Assumption-Carrying Execution: deterministic pre-execution leases for agent side effects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = []
keywords = ["agents", "safety", "tool-use", "policy", "runtime", "benchmark"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Documentation = "https://ace-runtime.pages.dev"

[project.scripts]
ace-runtime = "ace_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
